Finished up to Question 7 for week 1

--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -1,9 +1,9 @@
 # Homework Assignment - Week 1
 __Name__: Adam Collado
 
-__Question 1:__
+## __Question 1:__
 
-A) Convert the following numbers to their decimal representation. Show your work.
+__A) Convert the following numbers to their decimal representation. Show your work.__
 
 1. $10011011_2 =$
 
@@ -13,7 +13,7 @@ $=1*2^7 + 0*2^6 + 0*2^5 + 1*2^4 + 1*2^3 + 0*2^2 + 1*2^1 + 1*2^0$
 
 $=128 + 0 + 0 + 16 + 8 + 0 + 2 + 1$
 
-__$=155$__
+__Answer__: __$=155$__
 
 2. $456_7=$
 
@@ -41,7 +41,7 @@ $=250 + 50  + 5  + 4$
 
 $=309$
 
-B) Convert the following numbers to their binary representations:
+__B) Convert the following numbers to their binary representations:__
 
 1. $69_{10}$
 
@@ -109,7 +109,7 @@ To get the binary equivalent, we have to get the binary for each digit, and then
 
 $6D1A=0110 1101 0001 1010$
 
-C) Convert the following numbers to their hexadecimal representation:
+__C) Convert the following numbers to their hexadecimal representation:__
 
 1. $1101011_2$
 
@@ -125,3 +125,513 @@ $1101011=DB$
 
 2. $895_{10}$
 
+First we convert to binary by using log to find the most significant bit. Then once fully converted, we can convert from binary to hexadecimal.
+
+$log_2(895) = 9.805$
+
+Rounded down we get $9$
+
+$2^9=512$
+
+$895-512=383$
+
+$383-256=127$
+
+$127-64=63$
+
+$63-32=31$
+
+$31-16=15$
+
+$15-8=7$
+
+$7-4=3$
+
+$3-2=1$
+
+$1-1=0$
+
+|0|0|1|1|0|1|1|1|1|1|1|1|
+|-|-|-|-|-|-|-|-|-|-|-|-|
+|$2^{11}$|$2^{10}$|$2^9$|$2^8$|$2^7$|$2^6$|$2^5$|$2^4$|$2^3$|$2^2$|$2^1$|$2^0$|
+|2056|1024|512|256|128|64|32|16|8|4|2|1|
+
+= 0011 0111 1111
+
+
+|Bin|Hex|
+|-|-|
+|$0011$|$3$|
+|$0111$|$7$|
+|$1111$|$F$|
+
+$895_{10}$ = $38F_{16}$ 
+
+<div style="page-break-after: aLways;"></div>
+
+## Question 2:
+
+1. $7566_8 + 4515_8$
+
+$7566_8$
+
+$+4515_8$
+
+$=14303_8$
+
+2. $10110011_2 + 1101_2$
+
+$10110011$
+
+|1|0|1|1|0|0|1|1|
+|-|-|-|-|-|-|-|-|
+|0|0|0|0|1|1|0|1|
+|1|1|0|0|0|0|0|0|
+
+$=11000000$
+
+3. $7A66_16 + 45C5_16$
+
+4. $3022_5 - 2433_5$
+
+<div style="page-break-after: aLways;"></div>
+
+## __Question 3:__
+
+__A. Convert the following numbers to their 8-bits two's complement representation.
+
+1. 124_10
+
+$124 - 64 = 60$
+
+$60-32=28$
+
+$28-16=12$
+
+$12-8=4$
+
+$4-4=0$
+
+|0|1|1|1|1|1|0|0|
+|-|-|-|-|-|-|-|-|
+|$2^7$|$2^6$|$2^5$|$2^4$|$2^3$|$2^2$|$2^1$|$2^0$|
+|128|64|32|16|8|4|2|1|
+
+$=01111100$
+
+2. $-124_10$
+
+First we use the binary representation of 124 (we got that from the previous answer), and then perform 8 bit 2's complement to get the -124 in bits.
+
+
+|0|1|1|1|1|1|0|0|
+|-|-|-|-|-|-|-|-|
+|1|0|0|0|0|1|0|0|
+
+$=10000100$
+
+
+3. 109_10
+
+$109-64=45$
+
+$45-32=13$
+
+$13-8=5$
+
+$5-4=1$
+
+$1-1=0$
+
+|0|1|1|0|1|1|0|1|
+|-|-|-|-|-|-|-|-|
+|$2^7$|$2^6$|$2^5$|$2^4$|$2^3$|$2^2$|$2^1$|$2^0$|
+|128|64|32|16|8|4|2|1|
+
+$=01101101$
+
+
+4. -79_10
+
+First we use the binary representation of 79 and then perform 8 bit 2's complement to get the -124 in bits.
+$$
+79-64=15\\
+15-8=7\\
+7-4=3\\
+3-2=1\\
+1-1=0\\
+$$
+
+
+|0|1|0|0|1|1|1|1|
+|-|-|-|-|-|-|-|-|
+|$2^7$|$2^6$|$2^5$|$2^4$|$2^3$|$2^2$|$2^1$|$2^0$|
+|128|64|32|16|8|4|2|1|
+
+
+|0|1|0|0|1|1|1|1|
+|-|-|-|-|-|-|-|-|
+|1|0|1|1|0|0|0|1|
+
+__Answer:__ $10110001$
+
+B. Convert the following numbers (represented as 8-bit two's complement) to their decimal representation.
+
+1. $00011110_{8 bit 2's comp}$
+
+This is a positive number, so we can just do a straight conversion to base 10 for our answer.
+
+$$
+\begin{array}{|c|c|c|c|c|c|c|c|}
+    \hline
+    0 & 0 & 0 & 1 & 1 & 1 & 1 & 0\\ \hline
+    128 & 64 & 32 & 16 & 8 & 4 & 2 & 1\\ \hline
+\end{array}
+\\
+$$
+$$
+16+8+4+2 = 30
+$$
+
+__Answer__: $30$
+
+2. $11100110_{8 bit 2's comp}$
+
+This is a negative number, so first we'll flip the bits and then convert to base 10 and negate it.
+
+$$
+\begin{array}{|c|c|c|c|c|c|c|c|}
+    \hline
+    1 & 1 & 1 & 0 & 0 & 1 & 1 & 0\\  \hline
+    0 & 0 & 0 & 1 & 1 & 0 & 1 & 0\\ \hline
+    128 & 64 & 32 & 16 & 8 & 4 & 2 & 1\\ \hline
+\end{array}
+\\
+$$
+$$
+16 + 8 + 2 = 26
+$$
+
+__Answer__: $26$
+
+3. $00101101_{8 bit 2's comp}$
+
+This is a positive number, so we can just do a straight conversion to base 10 for our answer.
+
+$$
+\begin{array}{|c|c|c|c|c|c|c|c|}
+    \hline
+    0 & 0 & 1 & 0 & 1 & 1 & 0 & 1\\ \hline
+    128 & 64 & 32 & 16 & 8 & 4 & 2 & 1\\ \hline
+\end{array}
+\\
+$$
+$$
+32 + 8 + 4 + 1 = 45
+$$
+
+__Answer__: $45$
+
+4. $10011110_{8 bit 2's comp}$
+
+This is a negative number, so first we'll flip the bits and then convert to base 10 and negate it.
+
+$$
+\begin{array}{|c|c|c|c|c|c|c|c|}
+    \hline
+    1 & 0 & 0 & 1 & 1 & 1 & 1 & 0\\  \hline
+    0 & 1 & 1 & 0 & 0 & 0 & 1 & 0\\ \hline
+    128 & 64 & 32 & 16 & 8 & 4 & 2 & 1\\ \hline
+\end{array}
+\\
+$$
+$$
+64 + 32 + 4 = 98
+$$
+
+__Answer:__: $98$
+
+<div style="page-break-after: aLways;"></div>
+\pagebreak
+
+## Question 4:
+### Exercise 1.2.4
+#### B) $\neg (p \lor q)$
+
+$$
+\begin{array}{|c|c|c|c|}
+    \hline
+    p & q & p \lor q & \neg (p \lor q)\\ \hline\hline
+    T & T & T & F\\ \hline
+    T & F & T & F\\ \hline
+    F & T & T & F\\ \hline
+    F & F & F & T\\ \hline
+\end{array}
+
+$$
+#### C) $r \lor (p \land \neg q)$
+
+$$
+\begin{array}{|ccc|c|c|c|}
+    \hline
+    r & p & q & \neg q & p \land \neg q & r \lor (p \land \neg q)\\ \hline\hline
+    T & T & T & F & F & T \\ \hline
+    T & T & F & T & T & T \\ \hline
+    T & F & T & F & F & T \\ \hline
+    T & F & F & T & F & T \\ \hline
+    F & T & T & F & F & F \\ \hline
+    F & T & F & T & T & T \\ \hline
+    F & F & T & F & F & F \\ \hline
+    F & F & F & T & F & F \\ \hline
+\end{array}
+$$
+
+### Exercise 1.3.4
+
+#### B) $(p \rightarrow q) \rightarrow (q \rightarrow p)$
+
+#### D) $(p \leftrightarrow q) \oplus (p \leftrightarrow \neg q)$
+
+
+<div style="page-break-after: aLways;"></div>
+\pagebreak
+
+## Question 5:
+
+### Exercise 1.2.7
+
+#### B) The applicant must present at least two of the following forms of identification: birth certificate, driver's license, marriage license.
+
+$(B \land D) \lor (B \land M) \lor (D \land M))$
+
+#### C Applicant must present either a brith certificate or both a driver's licesne and a marriage license.
+
+$B \lor (D \land M)$
+
+### Exercise 1.3.7
+
+#### B) A person can park in the school parking lot if they are a senior or at least seventeen years of age
+
+$p \rightarrow (s \lor y)$
+
+#### C) Being 17 years of age is necesary condition for being able to park in the school parking lot.
+
+$y \leftrightarrow p$
+
+#### D) A person can park in the school parking lot if and only if the person is a senior and at least 17 years of age.
+
+$p \leftrightarrow (s \land y)$
+
+#### E) Being able to park in the school parking lot implies that the person is either a senior or at least 17 years old.
+
+$p \rightarrow (s \lor y)$
+
+### Exercise 1.3.9
+
+#### C) The applicant can enroll in the course only if the applicant has a parental permission.
+
+$c \rightarrow p$
+
+#### D) Having parental permission is a necessary condition for enrolling in the course.
+
+$p \rightarrow c$
+
+<div style="page-break-after: aLways;"></div>
+\pagebreak
+
+## Question 6:
+
+### Exercise 1.3.6
+
+#### B) _Maintaining a B average is necessary for Joe to be eligible for the honors program._
+
+If Joe is eligible for the honors program, then he is maintaining a B average.
+#### C) _Rajiv can go on the roller coaster only if he is at least four feet tall._
+
+If Raji can go on the roller  coaster, then he is at least four feet tall.
+#### D) _Rajiv can go on the roller coaster if he is at least four feet tall_.
+
+If Rajiv is at least four feet tall, then he can go on the roller coaster.
+
+### Exercise 1.3.10
+The variable p is true, q is false, and the truth value for variable r is unknown. Indicate whether the truth value of each logical expression is true, false, or unknown.
+
+#### C) $(p \lor r) \leftrightarrow (q \land r)$
+
+__The value of this expression is False.__
+
+$(p \lor r)$ will always be true since $p$ is true, and $or$ operations only require one proposition to be true. 
+
+$(q \land r)$ will always be false since $q$ is false, and the $and$ operation requires both propositions to be true to evaluate to true.
+#### D) $(p \land r) \leftrightarrow (q \land r)$
+__The value for this expression is Unknown__.
+
+While we know $(q \land r)$ will always evaluate to false since $q$ is always false, we cannot know what $(p \land r)$ will evaluate to as it requires both propositions to have be true, and $r$ is unknown. Since $(p \land r)$ can't be evaluated, then the full statement will be unknown as it requires both logical values to match, and the left statement will always be unknown.
+
+#### E) $p \rightarrow (r \lor q)$
+__The value for this expression is Unknown__.
+
+While we know that $p$ is true, $(r \lor q)$ cannot be evaluated since $r$ is unknown and we cannot solve the expression with just the knowledge of $q$. Since $(r \lor q)$ can't be resolved, we cannot evalute the expression as the conditional operator requires knowing the value of the conclusion if the hypothesis is shown as true.
+
+#### F) $(p \land q) \rightarrow r$
+__The value of this expression is True__.
+
+Since we know $p$ is true and $q$ is false, we can evaluate the statement $(p \land q)$ as false. With that knowledge in hand, we can resolve the expression since we know that the conditional operator will always resolve to true if the hypothesis is shown to be false.
+
+
+<div style="page-break-after: aLways;"></div>
+\pagebreak
+
+## Question 7:
+
+### Exercise 1.4.5
+
+#### B)
+If Sally did not get the job, then she was late for her interview or did not update her resume.
+$$\neg j \rightarrow (l \lor \neg r)$$
+
+If Sally updated her resume and did not get the job, then she was late for her interview.
+$$(r \land \neg l) \rightarrow j$$
+
+$$
+\begin{array}{|c|c|c|c|c|}
+    \hline
+    j & l & r &\neg j \rightarrow (l \lor \neg r) & (r \land \neg l) \rightarrow j  \\ \hline\hline
+    T & T & T & T & T\\ \hline
+    T & T & F & T & T\\ \hline
+    T & F & T & T & T\\ \hline
+    T & F & F & T & T\\ \hline
+    F & T & T & T & T\\ \hline
+    F & T & F & T & T\\ \hline
+    F & F & T & F & F\\ \hline
+    F & F & F & T & T\\ \hline
+\end{array}
+$$
+
+__The statements are logically equivalent.__
+#### C)
+If Sally got the job then she was not late for her interview.
+$$j \rightarrow \neg l$$
+If Sally did not get the job, then she was late for her interview.
+$$\neg j \rightarrow l$$
+$$
+\begin{array}{|c|c|c|c|}
+    \hline
+    j & l & j \rightarrow \neg l &\neg j \rightarrow l  \\ \hline\hline
+    T & T & F & T\\ \hline
+    T & F & T & T\\ \hline
+    F & T & T & T\\ \hline
+    F & F & T & F\\ \hline
+\end{array}
+$$
+
+__The statement are NOT logically equivalent__
+#### D)
+If Sally updated her resume or she was not late for her interview, then she got the job.
+$$(r \lor \neg l) \rightarrow j$$
+If Sally got the job, then she updated her resume and was not late for her interview.
+$$j \rightarrow (r \land \neg l)$$
+$$
+\begin{array}{|c|c|c|c|c|}
+    \hline
+    j & l & r &(r \lor \neg l) \rightarrow j &j \rightarrow (r \land \neg l)   \\ \hline\hline
+    T & T & T & T & F\\ \hline
+    T & T & F & T & F\\ \hline
+    T & F & T & T & T\\ \hline
+    T & F & F & T & F\\ \hline
+    F & T & T & F & T\\ \hline
+    F & T & F & F & T\\ \hline
+    F & F & T & T & T\\ \hline
+    F & F & F & F & T\\ \hline
+\end{array}
+$$
+
+__The statement are NOT logically equivalent__
+
+<div style="page-break-after: aLways;"></div>
+\pagebreak
+
+## Question 8:
+
+### Exercise 1.5.2
+
+#### C)
+#### F)
+#### I)
+
+### Exercise 1.5.3
+
+#### C)
+#### D)
+
+<div style="page-break-after: aLways;"></div>
+\pagebreak
+
+## Question 9:
+
+### Exercise 1.6.3
+#### C)
+#### D)
+### Exercise 1.7.4
+#### B)
+#### C)
+#### D)
+<div style="page-break-after: aLways;"></div>
+\pagebreak
+
+## Question 10:
+### Exercise 1.7.9
+
+#### C)
+#### D)
+#### E)
+#### F)
+#### G)
+#### H)
+#### I)
+
+### Exercise 1.9.2
+
+#### B)
+#### C)
+#### D)
+#### E)
+#### F)
+#### G)
+#### H)
+#### I)
+<div style="page-break-after: aLways;"></div>
+\pagebreak
+
+## Question 11:
+
+### Exercise 1.10.4
+#### C)
+#### D)
+#### E)
+#### F)
+#### G)
+### Exercise 1.10.7
+#### C)
+#### D)
+#### E)
+#### F)
+### Exercise 1.10.10
+#### C)
+#### D)
+#### E)
+#### F)
+
+<div style="page-break-after: aLways;"></div>
+\pagebreak
+
+## Question 12:
+### Exercise 1.8.2
+#### B)
+#### C)
+#### D)
+#### E)
+### Exercise 1.9.4
+#### C)
+#### D)
+#### E)
