Updating homework for transfer

--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -195,6 +195,7 @@ $=11000000$
 4. $3022_5 - 2433_5$
 
 <div style="page-break-after: aLways;"></div>
+\pagebreak
 
 ## __Question 3:__
 
@@ -367,8 +368,8 @@ $$
     F & T & T & F\\ \hline
     F & F & F & T\\ \hline
 \end{array}
-
 $$
+
 #### C) $r \lor (p \land \neg q)$
 
 $$
@@ -387,13 +388,10 @@ $$
 $$
 
 ### Exercise 1.3.4
-
-#### B) $(p \rightarrow q) \rightarrow (q \rightarrow p)$
-
-#### D) $(p \leftrightarrow q) \oplus (p \leftrightarrow \neg q)$
+### B) $(p \rightarrow q) \rightarrow (q \rightarrow p)$
+### D) $(p \leftrightarrow q) \oplus (p \leftrightarrow \neg q)$
 
 
-<div style="page-break-after: aLways;"></div>
 \pagebreak
 
 ## Question 5:
@@ -402,19 +400,19 @@ $$
 
 #### B) The applicant must present at least two of the following forms of identification: birth certificate, driver's license, marriage license.
 
-$(B \land D) \lor (B \land M) \lor (D \land M))$
+$$(B \land D) \lor (B \land M) \lor (D \land M))$$
 
-#### C Applicant must present either a brith certificate or both a driver's licesne and a marriage license.
+#### C Applicant must present either a birth certificate or both a driver's license and a marriage license.
 
-$B \lor (D \land M)$
+$$B \lor (D \land M)$$
 
 ### Exercise 1.3.7
 
 #### B) A person can park in the school parking lot if they are a senior or at least seventeen years of age
 
-$p \rightarrow (s \lor y)$
+$$p \rightarrow (s \lor y)$$
 
-#### C) Being 17 years of age is necesary condition for being able to park in the school parking lot.
+#### C) Being 17 years of age is necessary condition for being able to park in the school parking lot.
 
 $y \leftrightarrow p$
 
@@ -514,6 +512,7 @@ If Sally got the job then she was not late for her interview.
 $$j \rightarrow \neg l$$
 If Sally did not get the job, then she was late for her interview.
 $$\neg j \rightarrow l$$
+
 $$
 \begin{array}{|c|c|c|c|}
     \hline
@@ -555,9 +554,19 @@ __The statement are NOT logically equivalent__
 
 ### Exercise 1.5.2
 
-#### C)
-#### F)
-#### I)
+#### C) $(p \rightarrow q) \land (p \rightarrow r) \equiv p \rightarrow (q \land r)$
+
+$$
+(p \rightarrow q) \land (p \rightarrow r)
+\\
+(\neg p \lor q) \land (\neg p \lor r) \longrightarrow \text{Conditional Identity}
+\\
+\neg p \lor (q \land r) \longrightarrow \text{Distributive Law}
+
+$$
+
+#### F) $\neg(p \lor (\neg p \land q)) \equiv \neg p \land \neg q$
+#### I) $(p \land q) \rightarrow r \equiv (p \land \neg r) \rightarrow \neg q$
 
 ### Exercise 1.5.3
 
