Continue work on Homework 1

--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -562,17 +562,68 @@ $$
 (\neg p \lor q) \land (\neg p \lor r) \longrightarrow \text{Conditional Identity}
 \\
 \neg p \lor (q \land r) \longrightarrow \text{Distributive Law}
-
+\\
+p \rightarrow (q \land r) \longrightarrow \text{Conditional Identity}
 $$
 
 #### F) $\neg(p \lor (\neg p \land q)) \equiv \neg p \land \neg q$
+
+$$
+\neg(p \lor (\neg p \land q))
+\\
+\neg p \land \neg (\neg p \land q) \longrightarrow \text{De Morgan's Law}
+\\
+\neg p \land (\neg \neg p \lor \neg q) \longrightarrow \text{De Morgan's Law}
+\\
+\neg p \land (p \lor \neg q) \longrightarrow \text{Double Negation}
+\\
+(\neg p \land p) \lor (\neg p \land \neg q) \longrightarrow \text{Distributive Law}
+\\
+F \lor (\neg p \land \neg q) \longrightarrow \text{Complement Law}
+\\
+\neg p \land \neg q \longrightarrow \text{Identity Law}
+$$
 #### I) $(p \land q) \rightarrow r \equiv (p \land \neg r) \rightarrow \neg q$
+
+$$
+(p \land q) \rightarrow r
+\\
+\neg (p \land q) \lor r \longrightarrow \text{Conditional Identity}
+\\
+(\neg p \lor \neg q) \lor r \longrightarrow \text{De Morgan's Law}
+\\
+(\neg p \lor r) \lor \neg q \longrightarrow \text{Associative Law}
+\\
+\neg \neg (\neg p \lor r) \lor \neg q \longrightarrow \text{Double Negation}
+\\
+\neg (\neg p \lor r) \rightarrow \neg q \longrightarrow \text{Conditional Identity}
+\\
+(\neg \neg p \land \neg r) \rightarrow \neg q \longrightarrow \text{De Morgan's Law}
+\\
+(p \land \neg r) \rightarrow \neg q \longrightarrow \text{Double Negation}
+$$
 
 ### Exercise 1.5.3
 
-#### C)
-#### D)
-
+#### C) $\neg r \lor (\neg r \rightarrow p)$
+$$
+\neg r \lor (\neg r \rightarrow p) \equiv T \\
+\neg r \lor (\neg \neg r \lor p) \longrightarrow \text{Conditional Identity} \\
+\neg r \lor (r \lor p) \longrightarrow \text{Double Negation} \\
+(\neg r \lor r) \lor p \longrightarrow \text {Associative Law} \\
+T \lor p \longrightarrow \text{Complement Law}\\
+T \longrightarrow \text{Domination Law}
+$$
+#### D) $\neg (p \rightarrow q) \rightarrow \neg q$
+$$
+\neg (p \rightarrow q) \rightarrow \neg q \equiv T \\
+\neg \neg (p \rightarrow q) \lor \neg q \longrightarrow \text{Conditional Identity} \\
+(p \rightarrow q) \lor \neg q \longrightarrow \text{Double Negation} \\
+(\neg p \lor q) \lor \neg q \longrightarrow \text{Conditional Identity} \\
+\neg p \lor (q \lor \neg q) \longrightarrow \text{Associative Law} \\
+\neg p \lor T \longrightarrow \text{Complement Law} \\
+T \longrightarrow \text{Domination Law}
+$$
 <div style="page-break-after: aLways;"></div>
 \pagebreak
 
