Updated homework 1 to Question 10

--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -630,25 +630,42 @@ $$
 ## Question 9:
 
 ### Exercise 1.6.3
-#### C)
-#### D)
+#### C) There is a number that is equal to its square.
+$$
+\exists x (x = x^2)
+$$
+#### D) Every number is less than or equal to its square plus 1.
+$$
+\forall x (x <= x^2+1)
+$$
 ### Exercise 1.7.4
-#### B)
-#### C)
-#### D)
+#### B) Everyone was well and went to work yesterday.
+
+$$
+\forall x (\neg S(x) \land W(x))
+$$
+#### C) Everyone who was sick yesterday did not go to work.
+$$
+\forall x (S(x) \rightarrow \neg W(x))
+$$
+#### D) Yesterday someone was sick and went to work.
+$$
+\exists x (S(x) \land W(x))
+$$
+
 <div style="page-break-after: aLways;"></div>
 \pagebreak
 
 ## Question 10:
 ### Exercise 1.7.9
 
-#### C)
-#### D)
-#### E)
-#### F)
-#### G)
-#### H)
-#### I)
+#### C) $\exists x ((x = c) \rightarrow P(x))$
+#### D) $\exists x (Q(x) \land R(x))$
+#### E) $Q(a) \land P(d)$
+#### F) $\forall x ((x \neq b) \rightarrow Q(x))$
+#### G) $\forall x (P(x) \lor R(x))$
+#### H) $\forall x (R(x) \rightarrow P(x))$
+#### I) $\exists x (Q(x) \lor R(x))$
 
 ### Exercise 1.9.2
 
