--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -660,12 +660,19 @@ $$
 ### Exercise 1.7.9
 
 #### C) $\exists x ((x = c) \rightarrow P(x))$
+This is __True__.
 #### D) $\exists x (Q(x) \land R(x))$
+This is __True__.
 #### E) $Q(a) \land P(d)$
+This is __True__.
 #### F) $\forall x ((x \neq b) \rightarrow Q(x))$
+This is __True__.
 #### G) $\forall x (P(x) \lor R(x))$
+This is __False__.
 #### H) $\forall x (R(x) \rightarrow P(x))$
+This is __True__.
 #### I) $\exists x (Q(x) \lor R(x))$
+This is __True__.
 
 ### Exercise 1.9.2
 
