Started on Exercise 1.8.2

--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -711,10 +711,19 @@ This is __True__.
 
 ## Question 12:
 ### Exercise 1.8.2
-#### B)
-#### C)
-#### D)
-#### E)
+#### B) Every patient was given the medication or the placebo or both.
+$$
+\forall x (D(x) \lor P(x) )\\
+\text{Negation:} \neg \forall x (D(x) \lor P(x) ))\\
+\text{De Morgan's Law:} \exists x \neg (D(x) \lor P(x)))\\
+\text{De Morgan's Law:} \exists x (\neg D(x) \land \neg P(x)))\\
+\text{There is a patient who was not given the medication and was not given the placebo}
+
+$$
+#### C) There is a patient who took the medication and had migraines.
+
+#### D) Every patient who took the placebo had migraines.
+#### E) There is a patient who had migraines and was given the placebo.
 ### Exercise 1.9.4
 #### C)
 #### D)
