--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -715,15 +715,32 @@ This is __True__.
 $$
 \forall x (D(x) \lor P(x) )\\
 \text{Negation:} \neg \forall x (D(x) \lor P(x) ))\\
-\text{De Morgan's Law:} \exists x \neg (D(x) \lor P(x)))\\
 \text{De Morgan's Law:} \exists x (\neg D(x) \land \neg P(x)))\\
 \text{There is a patient who was not given the medication and was not given the placebo}
 
 $$
 #### C) There is a patient who took the medication and had migraines.
+$$
+\exists x (P(x) \land M(x)) \\
+\text{Negation:} \neg \exists x (P(x) \land M(x)) \\
+\text{De Morgan's Law:}  \forall x (\neg D(x) \lor \neg P(x)))\\
+\text{Every patient did not take the medicine or the placebo.}
+$$
 
 #### D) Every patient who took the placebo had migraines.
+$$
+\forall x (P(x) \rightarrow M(x))\\
+\text{Negation} \neg \forall x (P(x) \rightarrow M(x))\\
+\text{De Morgan's Law:} \exists x (P(x) \land \neg M(x))\\
+\text{There is a patient who took the placebo and did not have migraines}
+$$
 #### E) There is a patient who had migraines and was given the placebo.
+$$
+\exists x (M(x) \land P(x))\\
+\text{Negation} \neg \exists x (M(x) \land P(x))\\
+\text{De Morgan's Law:} \forall x (\neg M(x) \lor \neg P(x))\\
+\text{Every patient did not have migraines and was not given the placebo}
+$$
 ### Exercise 1.9.4
 #### C)
 #### D)
