Working on exercise 1.9.2

--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -676,14 +676,26 @@ This is __True__.
 
 ### Exercise 1.9.2
 
-#### B)
-#### C)
-#### D)
-#### E)
-#### F)
-#### G)
-#### H)
-#### I)
+#### B) $\exists x \forall y Q(x, y)$
+If $x=2$ then all $y$ values will evalute to true. 
+
+Therefore the statement is __True__.
+#### C) $\exists y \forall x P(x, y)$
+For every value of $x$, the universal player can select a $y$ that evalutes to false.
+
+Therefore, the statement is __False__.
+#### D) $\exists x \exists y S(x, y)$
+All values in the domain S(x, y) are false, therefore no combination can evaluate to true.
+
+Therefore, the statement is __False__.
+#### E) $\forall x \exists y Q(x, y)$
+
+
+#### F) $\forall x \exists y P(x, y)$
+#### G) $\forall x \forall y P(x, y)$
+#### H) $\exists x \exists y Q(x, y)$
+#### I) $\forall x \forall y \neg S(x, y)$
+
 <div style="page-break-after: aLways;"></div>
 \pagebreak
 
@@ -732,16 +744,16 @@ $$
 \forall x (P(x) \rightarrow M(x))\\
 \text{Negation} \neg \forall x (P(x) \rightarrow M(x))\\
 \text{De Morgan's Law:} \exists x (P(x) \land \neg M(x))\\
-\text{There is a patient who took the placebo and did not have migraines}
+\text{There is a patient who took the placebo and did not have migraines.}
 $$
 #### E) There is a patient who had migraines and was given the placebo.
 $$
 \exists x (M(x) \land P(x))\\
 \text{Negation} \neg \exists x (M(x) \land P(x))\\
 \text{De Morgan's Law:} \forall x (\neg M(x) \lor \neg P(x))\\
-\text{Every patient did not have migraines and was not given the placebo}
+\text{Every patient did not have migraines or was not given the placebo.}
 $$
 ### Exercise 1.9.4
-#### C)
-#### D)
-#### E)
+#### C) $\exists x \forall y (P(x, y) \rightarrow Q(x, y))$
+#### D) $\exists x \forall y (P(x, y) \leftrightarrow P(y, x))$
+#### E) $\exists x \exists y P(x, y) \lor \forall x \forall y Q(x, y)$
