--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -681,20 +681,36 @@ If $x=2$ then all $y$ values will evalute to true.
 
 Therefore the statement is __True__.
 #### C) $\exists y \forall x P(x, y)$
-For every value of $x$, the universal player can select a $y$ that evalutes to false.
+If $y=1$ then all $x$ values will evaluate to true.
 
-Therefore, the statement is __False__.
+Therefore, the statement is __True__.
 #### D) $\exists x \exists y S(x, y)$
 All values in the domain S(x, y) are false, therefore no combination can evaluate to true.
 
 Therefore, the statement is __False__.
 #### E) $\forall x \exists y Q(x, y)$
+There is no column with rows that has values that all evaluate to true.
 
+Therefore, the statement is __False__.
 
 #### F) $\forall x \exists y P(x, y)$
+There is at least one column where all rows evaluate to true.
+
+Therefore, the statement is __True__.
 #### G) $\forall x \forall y P(x, y)$
+There are several values for $x$ and $y$ that will evaluate to false. For instance, if $x=1$ and $y=2$, this would be false.
+
+Therefore, the statement is __False__.
+
+
 #### H) $\exists x \exists y Q(x, y)$
+There are several values for $x$ and $y$ that will evaluate to true. For instance, if $x=2$ and $y=1$, this would be true.
+
+Therefore. the statement is __True__.
 #### I) $\forall x \forall y \neg S(x, y)$
+All values in this false. By negating the statement, this makes all evaluations of $x$ and $y$ values as true.
+
+Therefore, the statement is __True__.
 
 <div style="page-break-after: aLways;"></div>
 \pagebreak
@@ -755,5 +771,28 @@ $$
 $$
 ### Exercise 1.9.4
 #### C) $\exists x \forall y (P(x, y) \rightarrow Q(x, y))$
+$$
+\exists x \forall y (\neg P(x, y) \lor Q(x, y)) \longrightarrow \text{Conditional Identity}\\
+\neg \forall x \exists y (\neg P(x, y) \lor Q(x, y)) \longrightarrow \text{De Morgan's Law}\\
+\forall x \neg \exists y (\neg P(x, y) \lor Q(x, y)) \longrightarrow \text{De Morgan's Law}\\
+\forall x \exists y \neg (\neg P(x, y) \lor Q(x, y)) \longrightarrow \text{De Morgan's Law}\\
+\forall x \exists y (\neg \neg P(x, y) \land \neg Q(x, y)) \longrightarrow \text {Double Negation}\\
+\forall x \exists y (P(x, y) \land \neg Q(x, y))
+$$
 #### D) $\exists x \forall y (P(x, y) \leftrightarrow P(y, x))$
+$$
+\exists x \forall y ((P(x, y) \rightarrow P(x, y)) \land (P(x, y) \rightarrow P(x, y))) \text{}\\
+\exists x \forall y ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
+\neg \forall x \exists y ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
+\forall x \neg \exists y ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
+\forall x \exists y \neg ((\neg P(x, y) \lor P(x, y)) \land (\neg P(x, y) \lor P(x, y))) \text{}\\
+\forall x \exists y (\neg (\neg P(x, y) \lor P(x, y)) \lor \neg (\neg P(x, y) \lor P(x, y))) \text{}\\
+\forall x \exists y ((\neg \neg P(x, y) \land \neg P(x, y)) \lor (\neg \neg P(x, y) \land \neg P(x, y))) \text{}\\
+\forall x \exists y ((P(x, y) \land \neg P(x, y)) \lor (P(x, y) \land \neg P(x, y))) \text{}\\
+$$
 #### E) $\exists x \exists y P(x, y) \lor \forall x \forall y Q(x, y)$
+$$
+\neg \forall x \forall y P(x, y) \lor \neg \exists x \exists y Q(x, y)\\
+\forall x \neg \forall y P(x, y) \lor \exists x \neg \exists y Q(x, y)\\
+\forall x \forall y \neg P(x, y) \land \exists x \exists y \neg Q(x, y)
+$$
