Working on Exercise 1.10.4

--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -113,7 +113,7 @@ __C) Convert the following numbers to their hexadecimal representation:__
 
 1. $1101011_2$
 
-To convert from binary to hexadecimal, we want to divide the binary into chunks of 4 bits. From there, we can convert the value into into a single digit represented in hexidecimal. Once completed for each chunk, we can then append the values from highest to lowest.
+To convert from binary to hexadecimal, we want to divide the binary into chunks of 4 bits. From there, we can convert the value into into a single digit represented in hexadecimal. Once completed for each chunk, we can then append the values from highest to lowest.
 
 
 |Bin|Hex|
@@ -469,7 +469,7 @@ While we know $(q \land r)$ will always evaluate to false since $q$ is always fa
 #### E) $p \rightarrow (r \lor q)$
 __The value for this expression is Unknown__.
 
-While we know that $p$ is true, $(r \lor q)$ cannot be evaluated since $r$ is unknown and we cannot solve the expression with just the knowledge of $q$. Since $(r \lor q)$ can't be resolved, we cannot evalute the expression as the conditional operator requires knowing the value of the conclusion if the hypothesis is shown as true.
+While we know that $p$ is true, $(r \lor q)$ cannot be evaluated since $r$ is unknown and we cannot solve the expression with just the knowledge of $q$. Since $(r \lor q)$ can't be resolved, we cannot evaluate the expression as the conditional operator requires knowing the value of the conclusion if the hypothesis is shown as true.
 
 #### F) $(p \land q) \rightarrow r$
 __The value of this expression is True__.
@@ -677,7 +677,7 @@ This is __True__.
 ### Exercise 1.9.2
 
 #### B) $\exists x \forall y Q(x, y)$
-If $x=2$ then all $y$ values will evalute to true. 
+If $x=2$ then all $y$ values will evaluate to true. 
 
 Therefore the statement is __True__.
 #### C) $\exists y \forall x P(x, y)$
@@ -718,21 +718,37 @@ Therefore, the statement is __True__.
 ## Question 11:
 
 ### Exercise 1.10.4
-#### C)
-#### D)
-#### E)
-#### F)
-#### G)
+#### C) There are two numbers whose sum is equal to their product.
+
+$$
+\exists x \exists y (x+y = x*y)
+$$
+#### D) The ratio of every two positive numbers is also positive.
+$$
+\forall x \forall y (((x > 0) \land (y  > 0)) \rightarrow (x / y > 0))
+$$
+#### E) The reciprocal of every positive number less than one is greater than one.
+$$
+\forall x (((x > 0) \land (x < 1)) \rightarrow (1/x > 1))
+$$
+#### F) There is no smallest number.
+$$
+\neg \exists x 
+$$
+#### G) Every number other than 0 has a multiplicative inverse.
+$$
+\forall x ((x*(1/x)=1) \land (x \neg 0))
+$$
 ### Exercise 1.10.7
-#### C)
-#### D)
-#### E)
-#### F)
+#### C) There is at least one new employee who missed the deadline
+#### D) Sam knows the phone number of everyone who missed the deadline
+#### E) There is a new employee who knows everyone's phone number
+#### F) Exactly one new employee missed the deadline.
 ### Exercise 1.10.10
-#### C)
-#### D)
-#### E)
-#### F)
+#### C) Every student has taken at least one class other than Math 101.
+#### D) There is a student who has taken every math class other than Math 101.
+#### E) Everyone other than Sam has taken at least two different math classes.
+#### F) Sam has taken exactly two math classes.
 
 <div style="page-break-after: aLways;"></div>
 \pagebreak
@@ -742,8 +758,8 @@ Therefore, the statement is __True__.
 #### B) Every patient was given the medication or the placebo or both.
 $$
 \forall x (D(x) \lor P(x) )\\
-\text{Negation:} \neg \forall x (D(x) \lor P(x) ))\\
-\text{De Morgan's Law:} \exists x (\neg D(x) \land \neg P(x)))\\
+\text{Negation:} \neg \forall x (D(x) \lor P(x) )\\
+\text{De Morgan's Law:} \exists x (\neg D(x) \land \neg P(x))\\
 \text{There is a patient who was not given the medication and was not given the placebo}
 
 $$
@@ -751,7 +767,7 @@ $$
 $$
 \exists x (P(x) \land M(x)) \\
 \text{Negation:} \neg \exists x (P(x) \land M(x)) \\
-\text{De Morgan's Law:}  \forall x (\neg D(x) \lor \neg P(x)))\\
+\text{De Morgan's Law:}  \forall x (\neg D(x) \lor \neg P(x))\\
 \text{Every patient did not take the medicine or the placebo.}
 $$
 
@@ -772,11 +788,11 @@ $$
 ### Exercise 1.9.4
 #### C) $\exists x \forall y (P(x, y) \rightarrow Q(x, y))$
 $$
-\exists x \forall y (\neg P(x, y) \lor Q(x, y)) \longrightarrow \text{Conditional Identity}\\
-\neg \forall x \exists y (\neg P(x, y) \lor Q(x, y)) \longrightarrow \text{De Morgan's Law}\\
-\forall x \neg \exists y (\neg P(x, y) \lor Q(x, y)) \longrightarrow \text{De Morgan's Law}\\
-\forall x \exists y \neg (\neg P(x, y) \lor Q(x, y)) \longrightarrow \text{De Morgan's Law}\\
-\forall x \exists y (\neg \neg P(x, y) \land \neg Q(x, y)) \longrightarrow \text {Double Negation}\\
+\exists x \forall y (\neg P(x, y) \lor Q(x, y))  \\
+\neg \forall x \exists y (\neg P(x, y) \lor Q(x, y))  \\
+\forall x \neg \exists y (\neg P(x, y) \lor Q(x, y))  \\
+\forall x \exists y \neg (\neg P(x, y) \lor Q(x, y))  \\
+\forall x \exists y (\neg \neg P(x, y) \land \neg Q(x, y)) \\
 \forall x \exists y (P(x, y) \land \neg Q(x, y))
 $$
 #### D) $\exists x \forall y (P(x, y) \leftrightarrow P(y, x))$
