--- a/week1/homework/ac10281_hw1.md
+++ b/week1/homework/ac10281_hw1.md
@@ -13,7 +13,7 @@ $=1*2^7 + 0*2^6 + 0*2^5 + 1*2^4 + 1*2^3 + 0*2^2 + 1*2^1 + 1*2^0$
 
 $=128 + 0 + 0 + 16 + 8 + 0 + 2 + 1$
 
-__Answer__: __$=155$__
+__Answer__: $=155$
 
 2. $456_7=$
 
@@ -23,7 +23,7 @@ $=4*7^2 + 5*7^1 + 6*7^0$
 
 $=196+ 35 + 6$
 
-$=237$
+__Answer:__ $=237$
 
 3. $38A_{16}=$
 
@@ -31,7 +31,7 @@ $=3*16^2 + 8*16^1 + 10*16^0$
 
 $=768 + 128 + 10$
 
-$=906$
+__Answer:__ $=906$
 
 4. $2214_5$
 
@@ -39,7 +39,7 @@ $=2*5^3 + 2*5^2 + 1*5^1 + 4*5^0$
 
 $=250 + 50  + 5  + 4$
 
-$=309$
+__Answer:__ $=309$
 
 __B) Convert the following numbers to their binary representations:__
 
@@ -64,7 +64,7 @@ $1-1=0$
 |$2^6$|$2^5$|$2^4$|$2^3$|$2^2$|$2^1$|$2^0$|
 |64|32|16|8|4|2|1|
 
-$69 = 1000101$
+__Answer:__ $69 = 1000101$
 
 2. $485_{10}$
 
@@ -94,7 +94,7 @@ $1-1=0$
 |$2^8$|$2^7$|$2^6$|$2^5$|$2^4$|$2^3$|$2^2$|$2^1$|$2^0$|
 |256|128|64|32|16|8|4|2|1|
 
-$485=111100101$
+__Answer:__ $485=111100101$
 
 3. $6D1A_{16}$
 
@@ -107,21 +107,23 @@ To get the binary equivalent, we have to get the binary for each digit, and then
 |$1$|$0001$|
 |$A$|$1010$|
 
-$6D1A=0110 1101 0001 1010$
+__Answer:__ $6D1A=0110 1101 0001 1010$
 
 __C) Convert the following numbers to their hexadecimal representation:__
 
 1. $1101011_2$
 
-To convert from binary to hexadecimal, we want to divide the binary into chunks of 4 bits. From there, we can convert the value into into a single digit represented in hexadecimal. Once completed for each chunk, we can then append the values from highest to lowest.
+To convert from binary to hexadecimal, we want to divide the binary into chunks of 4 bits. 
+
+From there, we can convert the value into into a single digit represented in hexadecimal. Once completed for each chunk, we can then append the values from highest to lowest.
 
 
 |Bin|Hex|
 |-|-|
-|$1101$|$D$|
+|$0110$|$6$|
 |$1011$|$B$|
 
-$1101011=DB$
+__Answer:__ $1101011=6B$
 
 2. $895_{10}$
 
@@ -156,7 +158,7 @@ $1-1=0$
 |$2^{11}$|$2^{10}$|$2^9$|$2^8$|$2^7$|$2^6$|$2^5$|$2^4$|$2^3$|$2^2$|$2^1$|$2^0$|
 |2056|1024|512|256|128|64|32|16|8|4|2|1|
 
-= 0011 0111 1111
+__Answer:__ $0011 0111 1111$
 
 
 |Bin|Hex|
@@ -165,7 +167,7 @@ $1-1=0$
 |$0111$|$7$|
 |$1111$|$F$|
 
-$895_{10}$ = $38F_{16}$ 
+__Answer:__ $895_{10}$ = $37F_{16}$ 
 
 <div style="page-break-after: aLways;"></div>
 
@@ -177,7 +179,7 @@ $7566_8$
 
 $+4515_8$
 
-$=14303_8$
+__Answer:__ $=14303_8$
 
 2. $10110011_2 + 1101_2$
 
@@ -188,9 +190,9 @@ $10110011$
 |0|0|0|0|1|1|0|1|
 |1|1|0|0|0|0|0|0|
 
-$=11000000$
+__Answer:__ $=11000000$
 
-3. $7A66_16 + 45C5_16$
+3. $7A66_{16} + 45C5_{16}$
 
 4. $3022_5 - 2433_5$
 
@@ -199,7 +201,7 @@ $=11000000$
 
 ## __Question 3:__
 
-__A. Convert the following numbers to their 8-bits two's complement representation.
+__A. Convert the following numbers to their 8-bits two's complement representation.__
 
 1. 124_10
 
@@ -218,7 +220,7 @@ $4-4=0$
 |$2^7$|$2^6$|$2^5$|$2^4$|$2^3$|$2^2$|$2^1$|$2^0$|
 |128|64|32|16|8|4|2|1|
 
-$=01111100$
+__Answer:__ $=01111100$
 
 2. $-124_10$
 
@@ -229,7 +231,7 @@ First we use the binary representation of 124 (we got that from the previous ans
 |-|-|-|-|-|-|-|-|
 |1|0|0|0|0|1|0|0|
 
-$=10000100$
+__Answer:__ $=10000100$
 
 
 3. 109_10
@@ -249,19 +251,19 @@ $1-1=0$
 |$2^7$|$2^6$|$2^5$|$2^4$|$2^3$|$2^2$|$2^1$|$2^0$|
 |128|64|32|16|8|4|2|1|
 
-$=01101101$
+__Answer:__ $=01101101$
 
 
 4. -79_10
 
 First we use the binary representation of 79 and then perform 8 bit 2's complement to get the -124 in bits.
-$$
-79-64=15\\
-15-8=7\\
-7-4=3\\
-3-2=1\\
-1-1=0\\
-$$
+\[
+79-64=15
+15-8=7
+7-4=3
+3-2=1
+1-1=0
+\]
 
 
 |0|1|0|0|1|1|1|1|
@@ -290,6 +292,7 @@ $$
 \end{array}
 \\
 $$
+
 $$
 16+8+4+2 = 30
 $$
@@ -313,7 +316,7 @@ $$
 16 + 8 + 2 = 26
 $$
 
-__Answer__: $26$
+__Answer__: $-26$
 
 3. $00101101_{8 bit 2's comp}$
 
@@ -350,7 +353,7 @@ $$
 64 + 32 + 4 = 98
 $$
 
-__Answer:__: $98$
+__Answer:__: $-98$
 
 <div style="page-break-after: aLways;"></div>
 \pagebreak
@@ -400,7 +403,7 @@ $$
 
 #### B) The applicant must present at least two of the following forms of identification: birth certificate, driver's license, marriage license.
 
-$$(B \land D) \lor (B \land M) \lor (D \land M))$$
+$$(B \land D) \lor (B \land M) \lor (D \land M)$$
 
 #### C Applicant must present either a birth certificate or both a driver's license and a marriage license.
 
@@ -410,11 +413,11 @@ $$B \lor (D \land M)$$
 
 #### B) A person can park in the school parking lot if they are a senior or at least seventeen years of age
 
-$$p \rightarrow (s \lor y)$$
+$$(s \lor y) \rightarrow p$$
 
 #### C) Being 17 years of age is necessary condition for being able to park in the school parking lot.
 
-$y \leftrightarrow p$
+$$p \rightarrow y$$
 
 #### D) A person can park in the school parking lot if and only if the person is a senior and at least 17 years of age.
 
@@ -432,7 +435,7 @@ $c \rightarrow p$
 
 #### D) Having parental permission is a necessary condition for enrolling in the course.
 
-$p \rightarrow c$
+$c \rightarrow p$
 
 <div style="page-break-after: aLways;"></div>
 \pagebreak
@@ -446,7 +449,7 @@ $p \rightarrow c$
 If Joe is eligible for the honors program, then he is maintaining a B average.
 #### C) _Rajiv can go on the roller coaster only if he is at least four feet tall._
 
-If Raji can go on the roller  coaster, then he is at least four feet tall.
+If Rajiv can go on the roller  coaster, then he is at least four feet tall.
 #### D) _Rajiv can go on the roller coaster if he is at least four feet tall_.
 
 If Rajiv is at least four feet tall, then he can go on the roller coaster.
@@ -660,7 +663,7 @@ $$
 ### Exercise 1.7.9
 
 #### C) $\exists x ((x = c) \rightarrow P(x))$
-This is __True__.
+This is __False__.
 #### D) $\exists x (Q(x) \land R(x))$
 This is __True__.
 #### E) $Q(a) \land P(d)$
@@ -733,7 +736,7 @@ $$
 $$
 #### F) There is no smallest number.
 $$
-\neg \exists x 
+\neg \exists x \forall y (x \leq y
 $$
 #### G) Every number other than 0 has a multiplicative inverse.
 $$
@@ -741,8 +744,17 @@ $$
 $$
 ### Exercise 1.10.7
 #### C) There is at least one new employee who missed the deadline
+$$
+\exists x \forall y (N(x) \land ((x \geq 3) \rightarrow D(y)))
+$$
 #### D) Sam knows the phone number of everyone who missed the deadline
+$$
+\forall x (P(Sam, x) \rightarrow D(x))
+$$
 #### E) There is a new employee who knows everyone's phone number
+$$
+\exists x \forall y (
+$$
 #### F) Exactly one new employee missed the deadline.
 ### Exercise 1.10.10
 #### C) Every student has taken at least one class other than Math 101.
